--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -11,12 +11,16 @@ html, body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
+    scrollbar-width: none;
 }
 
 body {
     color: $black;
     background-color: $white;
     font-family: 'Inter', sans-serif;
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 h1, h2, h3, h4, h5, h6 {
